# microshop

./: .gitignore  crud.py  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_05_14_0952-0123582c9424_create_products_table.py  2025_05_14_0959-71c26b226bf0_create_users_table.py  2025_05_14_1005-b89f62c0570a_create_posts_table.py  2025_05_14_1028-6659db96ad9d_create_profile_table.py  2025_05_14_1218-a49645f37f55_update_users_table.py  2025_05_14_1228-39bf3b2c2fbb_update_users_table.py  2025_05_26_0834-7aa43a958a96_create_orders_table.py  2025_05_26_0858-a056db92d5aa_create_orders_association_table.py  2025_06_23_0741-4c985119c5be_add_count_to_ass_tbl.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: Post.py  __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py  views.py
